# rinha-2026

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  docker-compose.sim.yml  docker-compose.yml  entrypoint.sh  haproxy.cfg  info.json  pyproject.toml  ruff.toml
.claude/: settings.json
docs/: EVOLUTION.md  PRD.md
fraud_api/: app.py  handlers.py  index.py  partition.py  profile.py  rsgi_app.py  schemas.py  search.py  state.py  vectorize.py
knn_simd/: Cargo.toml  pyproject.toml
knn_simd/src/: lib.rs
scripts/: build_index.py  download_data.py  tune_nprobe.sh
tests/: test_contract.py  test_parity.py
